{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 268,
  "lineage": "dca1ba30-3f61-b07b-a91e-3f3823e1efb1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065bb5126e4504910",
            "arn": "arn:aws:ec2:us-east-1:865601481150:instance/i-00e245b5d369662af",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "boyinas-dev-74893-74893-nginx_profile",
            "id": "i-00e245b5d369662af",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07e290e999c6e14ce",
            "private_dns": "ip-10-0-0-83.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.83",
            "public_dns": "ec2-34-203-224-185.compute-1.amazonaws.com",
            "public_ip": "34.203.224.185",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ab08e3b8045098bb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c46b9527591d156e",
            "tags": {
              "Name": "boyinas-dev-74893-web",
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "tags_all": {
              "Name": "boyinas-dev-74893-web",
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09f68f87f09466ffc"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065bb5126e4504910",
            "arn": "arn:aws:ec2:us-east-1:865601481150:instance/i-0bfff9aa708495eb3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "boyinas-dev-74893-74893-nginx_profile",
            "id": "i-0bfff9aa708495eb3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07f0f95065ef61631",
            "private_dns": "ip-10-0-1-92.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.92",
            "public_dns": "ec2-18-207-174-250.compute-1.amazonaws.com",
            "public_ip": "18.207.174.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02338677245635f80",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e3b46a8b4c8025b7",
            "tags": {
              "Name": "boyinas-dev-74893-web",
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "tags_all": {
              "Name": "boyinas-dev-74893-web",
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09f68f87f09466ffc"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "boyinas-dev-74893-74893",
                "enabled": true,
                "prefix": "alb-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:865601481150:loadbalancer/app/global-web-alb/c961f6920d56d58d",
            "arn_suffix": "app/global-web-alb/c961f6920d56d58d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "global-web-alb-882820956.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:865601481150:loadbalancer/app/global-web-alb/c961f6920d56d58d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "global-web-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0067630517333e293"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c46b9527591d156e"
              },
              {
                "subnet_id": "subnet-0e3b46a8b4c8025b7"
              }
            ],
            "subnets": [
              "subnet-0c46b9527591d156e",
              "subnet-0e3b46a8b4c8025b7"
            ],
            "tags": {
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "tags_all": {
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "vpc_id": "vpc-0bb3816f645afed57",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginxd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:865601481150:listener/app/global-web-alb/c961f6920d56d58d/31a78b9522808a72",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:865601481150:targetgroup/nginx-alb-tg/b844ca5522d0d961",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:865601481150:listener/app/global-web-alb/c961f6920d56d58d/31a78b9522808a72",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:865601481150:loadbalancer/app/global-web-alb/c961f6920d56d58d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "tags_all": {
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx",
            "aws_lb_target_group.nginx",
            "aws_security_group.alb_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:865601481150:targetgroup/nginx-alb-tg/b844ca5522d0d961",
            "arn_suffix": "targetgroup/nginx-alb-tg/b844ca5522d0d961",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:865601481150:targetgroup/nginx-alb-tg/b844ca5522d0d961",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginx-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "tags_all": {
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0bb3816f645afed57"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:865601481150:targetgroup/nginx-alb-tg/b844ca5522d0d961-20230215164635974800000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:865601481150:targetgroup/nginx-alb-tg/b844ca5522d0d961",
            "target_id": "i-00e245b5d369662af"
          },
          "dependencies": [
            "aws_instance.nginx",
            "aws_lb_target_group.nginx",
            "aws_security_group.nginx-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:865601481150:targetgroup/nginx-alb-tg/b844ca5522d0d961-20230215164636074800000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:865601481150:targetgroup/nginx-alb-tg/b844ca5522d0d961",
            "target_id": "i-0bfff9aa708495eb3"
          },
          "dependencies": [
            "aws_instance.nginx",
            "aws_lb_target_group.nginx",
            "aws_security_group.nginx-sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "data.aws_ssm_parameter.ami",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web_app_s3.aws_iam_instance_profile.nginx_profile",
            "module.web_app_s3.aws_iam_role.allow_nginx_s3",
            "module.web_app_s3.aws_iam_role_policy.allow_s3_all",
            "module.web_app_s3.aws_s3_bucket.web_bucket",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:865601481150:security-group/sg-0067630517333e293",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0067630517333e293",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_alb_sg",
            "name_prefix": "",
            "owner_id": "865601481150",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "boyinas-dev-74893-vpc",
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "tags_all": {
              "Name": "boyinas-dev-74893-vpc",
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb3816f645afed57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:865601481150:security-group/sg-09f68f87f09466ffc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09f68f87f09466ffc",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_sg",
            "name_prefix": "",
            "owner_id": "865601481150",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "boyinas-dev-74893-vpc",
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "tags_all": {
              "Name": "boyinas-dev-74893-vpc",
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb3816f645afed57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:865601481150:internet-gateway/igw-0ddf98f606c579edb",
            "id": "igw-0ddf98f606c579edb",
            "owner_id": "865601481150",
            "tags": {
              "Name": "boyinas-dev-74893-vpc",
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "tags_all": {
              "Name": "boyinas-dev-74893-vpc",
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "vpc_id": "vpc-0bb3816f645afed57"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ddf98f606c579edb",
            "id": "r-rtb-0afaaeef71a040f901080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0afaaeef71a040f90",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:865601481150:route-table/rtb-0afaaeef71a040f90",
            "id": "rtb-0afaaeef71a040f90",
            "owner_id": "865601481150",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "boyinas-dev-74893-vpc",
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "tags_all": {
              "Name": "boyinas-dev-74893-vpc",
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb3816f645afed57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b44741580934d65d",
            "route_table_id": "rtb-0afaaeef71a040f90",
            "subnet_id": "subnet-0c46b9527591d156e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02adc87b6ed610b99",
            "route_table_id": "rtb-0afaaeef71a040f90",
            "subnet_id": "subnet-0e3b46a8b4c8025b7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:865601481150:subnet/subnet-0c46b9527591d156e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c46b9527591d156e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "865601481150",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "boyinas-dev-74893-vpc",
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "tags_all": {
              "Name": "boyinas-dev-74893-vpc",
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "vpc_id": "vpc-0bb3816f645afed57"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:865601481150:subnet/subnet-0e3b46a8b4c8025b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3b46a8b4c8025b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "865601481150",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "boyinas-dev-74893-vpc",
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "tags_all": {
              "Name": "boyinas-dev-74893-vpc",
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "vpc_id": "vpc-0bb3816f645afed57"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:865601481150:vpc/vpc-0bb3816f645afed57",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d791da005696e49a",
            "default_route_table_id": "rtb-00c18a91060358d8c",
            "default_security_group_id": "sg-05cab977b5b56bd92",
            "dhcp_options_id": "dopt-0298b367dcac9516f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bb3816f645afed57",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00c18a91060358d8c",
            "owner_id": "865601481150",
            "tags": {
              "Name": "boyinas-dev-74893-vpc",
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            },
            "tags_all": {
              "Name": "boyinas-dev-74893-vpc",
              "billing_code": "sandbox_001",
              "company": "Boyinas",
              "project": "Boyinas-sandbox"
            }
          },
          "dependencies": [
            "random_integer.rand"
          ]
        }
      ]
    }
  ]
}